adds kafka to fluss flink exec